--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,12 @@
-.idea/workspace.xml
-
-db.sqlite3
-*.pyc
-*/*.pyc
-*/*/*.pyc
+# Distribution / packaging
+.Python
+venv/
+env/
+*.sqlite3
+.idea/# Project asset folders
+media/# Database
+db.sqlite3# Editor directories and files
+.idea# Byte-compiled / optimized / DLL files
+__pycache__/
+*.py[cod]
+*$py.class
